--- a/.github/workflows/webpage.yml
+++ b/.github/workflows/webpage.yml
@@ -4,6 +4,9 @@ on:
   release:
       types: [released]
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -18,7 +21,7 @@ jobs:
   build:
     uses: ./.github/workflows/webpage-build.yml
 
-  deploy:   
+  deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
