test: ✅ add test
Release-As: 0.1.0

Basic functionality test in a thread-based pool.

--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -15,4 +15,6 @@ jobs:
         with:
           release: ${{ matrix.release }}
           cache: true
+          products: >
+            Parallel_Computing_Toolbox
       - uses: matlab-actions/run-build@v2
